; ModuleID = '/home/carl/AnghaBench/linux/sound/core/extr_info.c_snd_info_entry_mmap.c'
source_filename = "/home/carl/AnghaBench/linux/sound/core/extr_info.c_snd_info_entry_mmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.snd_info_private_data* }
%struct.snd_info_private_data = type { i32, %struct.snd_info_entry* }
%struct.snd_info_entry = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.snd_info_entry*, i32, %struct.inode*, %struct.file*, %struct.vm_area_struct*)* }
%struct.inode = type { i32 }
%struct.vm_area_struct = type { i32 }

@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, %struct.vm_area_struct*)* @snd_info_entry_mmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_info_entry_mmap(%struct.file* %0, %struct.vm_area_struct* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.vm_area_struct*, align 8
  %6 = alloca %struct.inode*, align 8
  %7 = alloca %struct.snd_info_private_data*, align 8
  %8 = alloca %struct.snd_info_entry*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store %struct.vm_area_struct* %1, %struct.vm_area_struct** %5, align 8
  %9 = load %struct.file*, %struct.file** %4, align 8
  %10 = call %struct.inode* @file_inode(%struct.file* %9)
  store %struct.inode* %10, %struct.inode** %6, align 8
  %11 = load %struct.file*, %struct.file** %4, align 8
  %12 = getelementptr inbounds %struct.file, %struct.file* %11, i32 0, i32 0
  %13 = load %struct.snd_info_private_data*, %struct.snd_info_private_data** %12, align 8
  store %struct.snd_info_private_data* %13, %struct.snd_info_private_data** %7, align 8
  %14 = load %struct.snd_info_private_data*, %struct.snd_info_private_data** %7, align 8
  %15 = icmp eq %struct.snd_info_private_data* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %46

17:                                               ; preds = %2
  %18 = load %struct.snd_info_private_data*, %struct.snd_info_private_data** %7, align 8
  %19 = getelementptr inbounds %struct.snd_info_private_data, %struct.snd_info_private_data* %18, i32 0, i32 1
  %20 = load %struct.snd_info_entry*, %struct.snd_info_entry** %19, align 8
  store %struct.snd_info_entry* %20, %struct.snd_info_entry** %8, align 8
  %21 = load %struct.snd_info_entry*, %struct.snd_info_entry** %8, align 8
  %22 = getelementptr inbounds %struct.snd_info_entry, %struct.snd_info_entry* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32 (%struct.snd_info_entry*, i32, %struct.inode*, %struct.file*, %struct.vm_area_struct*)*, i32 (%struct.snd_info_entry*, i32, %struct.inode*, %struct.file*, %struct.vm_area_struct*)** %25, align 8
  %27 = icmp ne i32 (%struct.snd_info_entry*, i32, %struct.inode*, %struct.file*, %struct.vm_area_struct*)* %26, null
  br i1 %27, label %31, label %28

28:                                               ; preds = %17
  %29 = load i32, i32* @ENXIO, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %3, align 4
  br label %46

31:                                               ; preds = %17
  %32 = load %struct.snd_info_entry*, %struct.snd_info_entry** %8, align 8
  %33 = getelementptr inbounds %struct.snd_info_entry, %struct.snd_info_entry* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i32 (%struct.snd_info_entry*, i32, %struct.inode*, %struct.file*, %struct.vm_area_struct*)*, i32 (%struct.snd_info_entry*, i32, %struct.inode*, %struct.file*, %struct.vm_area_struct*)** %36, align 8
  %38 = load %struct.snd_info_entry*, %struct.snd_info_entry** %8, align 8
  %39 = load %struct.snd_info_private_data*, %struct.snd_info_private_data** %7, align 8
  %40 = getelementptr inbounds %struct.snd_info_private_data, %struct.snd_info_private_data* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = load %struct.inode*, %struct.inode** %6, align 8
  %43 = load %struct.file*, %struct.file** %4, align 8
  %44 = load %struct.vm_area_struct*, %struct.vm_area_struct** %5, align 8
  %45 = call i32 %37(%struct.snd_info_entry* %38, i32 %41, %struct.inode* %42, %struct.file* %43, %struct.vm_area_struct* %44)
  store i32 %45, i32* %3, align 4
  br label %46

46:                                               ; preds = %31, %28, %16
  %47 = load i32, i32* %3, align 4
  ret i32 %47
}

declare dso_local %struct.inode* @file_inode(%struct.file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
